hphp/test/zend/good/Zend/tests/class_name_as_scalar_error_004.php
<?php

namespace Foo\Bar {
    class One {
        public function baz($x = parent::class) {}
    }
}
?>